@@ -1,3 +1,5 @@
+- Bug Fix: Fix bug in PersonCustomer#switchCustomer, which prevents the creation of a new debt account [#qubIT-Fenix-4662]
+
 11.3.0 (11-12-2023)
 - Improvement: Apply balance transfer service automatically, if the balance transfer service implementation allows [#qubIT-Fenix-4662]
 
